[gd_scene load_steps=2 format=3 uid="uid://bofj8mugrn4cx"]

[ext_resource type="Script" uid="uid://dqp5xo6cbkosx" path="res://components/LootOptionButtons/loot_option_buttons.gd" id="1_d7ccl"]

[node name="LootOptionButtons" type="GridContainer"]
script = ExtResource("1_d7ccl")

[node name="HelmetOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Helmet"
popup/item_0/disabled = true

[node name="ChestOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Chest"
popup/item_0/disabled = true

[node name="LegsOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Legs"
popup/item_0/disabled = true

[node name="WeaponOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Weapon"
popup/item_0/disabled = true

[connection signal="item_selected" from="HelmetOptionButton" to="." method="_on_helmet_option_button_item_selected"]
